--- a/_posts/2019-07-04-the-us-narrative-today.html
+++ b/_posts/2019-07-04-the-us-narrative-today.html
@@ -2570,107 +2570,107 @@ stories:
   domain: http://www.dailypress.com/
   link: https://www.craigdailypress.com/news/stay-safe-avoid-tubing-yampa-river-during-high-flows-this-4th-of-july/
 images:
-- name: school-clouds-church-clouds-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-china-prop.jpg
-- name: berlinwall-DSC-0084-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-clean-view.jpg
-- name: oldhousecars-house-old-cars-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-purple-pond.jpg
-- name: stories-36698086536-f214416faf-z.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-36698086536-f214416faf-z.jpg
-- name: trucksilo-trucksilo-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-diego-rivera1.jpg
-- name: cargo-ship-cargo-ship-on-sea-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-yellow-collage.jpg
-- name: yosemite-yosemite-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-purple-storm.jpg
-- name: oldhouse-oldhouse-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-feed-people.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-neo-instinct.jpg
-- name: walled-garden-walled-garden-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-crunch-paper.jpg
-- name: supreme-court-supremecourt-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-clean-view.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-oily-mcoilface.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-oily-mcoilface.JPG
-- name: oldtrain-oldtrain-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-bright-sand.jpg
-- name: server-cloud-server-racks-clouds-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-copper-circuit-2.jpg
-- name: dragon-desert-desert-dragon-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-constitution.jpg
-- name: wind-mills-windmills-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-colorful-blocks.jpg
-- name: cargo-ship-cargo-ship-on-sea-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-hot-spicy.jpg
-- name: ellis-island-ellisisland-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-crafty-painting.jpg
-- name: crow-crow-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-creativity.jpg
-- name: san-francisco-street-view-san-francisco-street-view-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-yellow-paper.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-colorful-blocks.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-colorful-blocks.JPG
-- name: paris-paris-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-purp-paper.jpg
-- name: dragon-desert-desert-dragon-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-graham-sutherland.jpg
-- name: cargo-ship-cargo-ship-on-sea-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-smoking-cigarette.jpg
-- name: catacombs-catacombs-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-diego-rivera1.jpg
-- name: rockingchair-rockingchair-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-constitution.jpg
-- name: stories-facing-cannon-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-facing-cannon-copper-circuit.jpg
-- name: old-cabin-oldcabin-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-hot-spicy.jpg
-- name: bluelake-crunch-paper-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-crunch-paper-file-00-00-00-00.jpg
-- name: downtown-los-angeles-downtown-la-alien-goggles.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-alien-goggles.JPG
-- name: san-francisco-city-bridge-sf-city-bridge-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-dali-three.jpg
-- name: subway-subway-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-gan-vogh.jpg
-- name: blossombar-crafty-painting-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-62.jpg
-- name: old-door-lock-old-door-lock-2-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-clean-view.jpg
-- name: white-house-lawn-white-house-window-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-gan-vogh.jpg
-- name: crow-crow-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-aqua.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-free-woman.jpg
-- name: copper-circuit-old-building-green-awnings.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-building-green-awnings.jpg
-- name: san-francisco-street-view-san-francisco-street-view-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-crafty-painting.jpg
-- name: white-house-lawn-white-house-lawn-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-space-pizza.jpg
-- name: oldhousecars-house-old-cars-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-blue-granite.jpg
-- name: bordercrossing-bordercrossing-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-creativity.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-sand-paper.jpg
-- name: blossombar-colorful-dream-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-colorful-dream-file-00-00-24-99.jpg
-- name: miamibeach-miamibeach-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-graham-sutherland.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-colorful-dream.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-colorful-dream.JPG
-- name: downtown-los-angeles-downtown-la-free-woman.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-free-woman.JPG
-- name: dragon-desert-desert-dragon-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-alien-goggles.jpg
-- name: blossombar-creativity-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-creativity-file-00-00-50-62.jpg
-- name: oldhousecars-house-old-cars-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-post-modern.jpg
-- name: rockingchair-face-2-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-constitution.jpg
+- name: oldcabin-store-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-smoking-cigarette.jpg
+- name: bordercrossing-bordercrossing-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-alien-goggles.jpg
+- name: old-granary-field-granaryfield-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-diego-rivera1.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-matrix.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-matrix.JPG
+- name: containership-containership-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-constitution.jpg
+- name: border-crossing-bordercrossing-blue-electricity.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-blue-electricity.png
+- name: window-window-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-crunch-paper.jpg
+- name: mistywoods-babyfoot-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-space-pizza.jpg
+- name: beach-rocks-beach-rocks-currents-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-dali-two.jpg
+- name: old-gas-pumps-oldgaspumps-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-diego-rivera1.jpg
+- name: adam-smith-adam-smith-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-gan-vogh.jpg
+- name: nazi-invasion-IMG_8494.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_8494.jpg
+- name: dc-statue-dcstatue-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-nazi-poster.jpg
+- name: aws-s3-blossombar-blossombar-still-1200.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-blossombar-blossombar-still-1200.png
+- name: old-granary-field-granaryfield-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-neo-instinct.jpg
+- name: stories-new-16-77-800-500-0-max-0-1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-16-77-800-500-0-max-0-1--1.jpg
+- name: server-cloud-server-racks-clouds-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-bright-sand.jpg
+- name: old-gas-pumps-oldgaspumps-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-bright-sand.jpg
+- name: berlinwall-DSC-0084-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-far-away.jpg
+- name: old-house-oldhouse-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-dark-soul.jpg
+- name: power-lines-power-lines-empty-space-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-purple-storm.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-colorful-blocks.jpg
+- name: aws-s3-stories-DSC-0084-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-DSC-0084-dali-three.jpg
+- name: downtheline-downtheline-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-smoking-cigarette.jpg
+- name: wreck-IMG_6984.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wreck-IMG_6984.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-aqua.jpg
+- name: castle-wall-DSC-0067-purp-paper.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-purp-paper.JPG
+- name: oldcabin-store-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-atari-missle.jpg
+- name: supreme-court-supremecourt-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-post-modern.jpg
+- name: san-francisco-street-view-san-francisco-street-view-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-dali-two.jpg
+- name: machine-road-machine-road-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-emily-carr.jpg
+- name: oldbarn-oldbarn-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-dark-rain.jpg
+- name: stories-new-109-204-800-500-0-max-0-1--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-109-204-800-500-0-max-0-1--5.jpg
+- name: old-house-oldhouse-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-internet-numbers.jpg
+- name: oldhouse-granaryfield-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-kand-two.jpg
+- name: oldcabin-store-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-ww2-dresden.jpg
+- name: border-fence-border-fence-on-hill-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-kand-two.jpg
+- name: lincoln-memorial-lincolnmemorial-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-dali-two.jpg
+- name: gears-4882162452-fa3126b38d-b-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-internet-numbers.jpg
+- name: status-berlin-status-berlin-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-purple-pond.jpg
+- name: white-house-lawn-white-house-window-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-far-away.jpg
+- name: hollywood-building-hollywood-building-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-nazi-poster.jpg
+- name: locked-up-steam-lock-up-steam-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-blue-circuit-3.jpg
+- name: server-cloud-server-racks-clouds-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-pablo-blue.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-matrix.jpg
+- name: yuma-bank-yuma-bak-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-blue-brush.jpg
+- name: stories-new-16-38-600-500-0-max-1-1-2-0.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-16-38-600-500-0-max-1-1-2-0.jpg
+- name: yosemite-yosemite-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-internet-numbers.jpg
+- name: store-on-corner-oldcabin-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-oily-mcoilface.jpg
+- name: server-cloud-server-racks-door-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-smoking-cigarette.jpg
+- name: old-door-lock-old-door-lock-2-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-cinnamon-rolls.jpg
 ---
 See How Trump's 4th Of July Event Is Different Than Usual.&nbsp;How Gay Rights Went Mainstream And What It Cost.&nbsp;What Are You Willing To Sacrifice For Christ?.&nbsp;Online Marketing Creates Opportunities For Real Businesses.&nbsp;Parades, Parties, Pomp And Circumstance Fill Fourth Of July.&nbsp;Beach Safety Reminders From Charleston County Parks.&nbsp;French Michael Jackson Fans Sue 'Leaving Neverland' Accusers.&nbsp;'Stranger Things' Ties In With 1980's Brand Nostalgia.&nbsp;
